--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "express": "^5.0.0-beta.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
-    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
